@@ -15,8 +15,7 @@
 #include "ace/Metrics_Cache_T.inl"
 #endif /* __ACE_INLINE__ */
 
-// Const strings for timeprobe event type descriptions.
-
+/// Const strings for timeprobe event type descriptions.
 static const char * event_description_strings [] =
 {
   "start",
@@ -169,7 +168,7 @@ flush_ACE_Metrics_Timeprobe ()
 template <class ACE_LOCK, class ALLOCATOR>
 ACE_Metrics_Cache<ACE_LOCK, ALLOCATOR>::
 ACE_Metrics_Cache (u_long table_size,
-                   u_long number_of_probes,
+                   u_long,
                    ALLOCATOR *alloc)
   : probe_set_size_ (0),
     enqueue_names_ (0),
@@ -183,7 +182,6 @@ ACE_Metrics_Cache (u_long table_size,
     metrics_enabled_(1),
     allocator_ (alloc)
 {
-  ACE_UNUSED_ARG(number_of_probes);
   // Initialize probe and count arrays.
 
   // Ensure that the high res timer global scale factor
@@ -206,7 +204,6 @@ template <class ACE_LOCK, class ALLOCATOR>
 ACE_Metrics_Cache<ACE_LOCK, ALLOCATOR>::~ACE_Metrics_Cache ()
 {
 }
-
 
 // Obtain an allocator pointer correctly thunked for the current
 // address space.  If there is no allocator stored in the instance,
